# stock-prediction

./: pyproject.toml
stock_market/app/: app.py
stock_market/scrapers/: twitter.ipynb  twitter.py
