[tool.poetry]
name = "stock-market"
version = "0.1.0"
description = ""
authors = ["0aaryan <aroraryan826@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scweet = "^1.8"
twscrape = "^0.13"
streamlit = "^1.37.0"
twitter-scraper-selenium = "^6.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
